# contacts_fast_api

./: README.md  pyproject.toml
contacts_rest_api/: docker-compose.yml  main.py  test.db
contacts_rest_api/docs/: conf.py
contacts_rest_api/docs/_build/doctrees/: environment.pickle  index.doctree
contacts_rest_api/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
contacts_rest_api/docs/_build/html/_sources/: index.rst.txt
contacts_rest_api/migrations/: env.py
contacts_rest_api/migrations/versions/: 2ef44561d208_user_id.py  742c09ab7dba_confirmed.py  84ce9c0be9cf_add_user.py  9bff0880fb9a_init.py  cba4fa9a29f8_user_id_auto.py
contacts_rest_api/postgres-data/base/1/: 1259  2619  2696  2840  2841
contacts_rest_api/postgres-data/base/16384/: pg_internal.init
contacts_rest_api/postgres-data/base/5/: pg_internal.init
contacts_rest_api/postgres-data/global/: 1260  1262  2671  pg_control
contacts_rest_api/postgres-data/pg_stat/: pgstat.stat
contacts_rest_api/src/: schemas.py
contacts_rest_api/src/conf/: config.ini  config.py  messages.py
contacts_rest_api/src/database/: db.py  models.py
contacts_rest_api/src/repository/: contacts.py  users.py
contacts_rest_api/src/routes/: auth.py  contacts.py  users.py
contacts_rest_api/src/services/: auth.py  email.py
contacts_rest_api/templates/: index.html
contacts_rest_api/tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
test_app_notes/migrations/versions/: e156238058c7_init.py
test_app_notes/src/: schemas.py
test_app_notes/src/database/: db.py
test_app_notes/src/repository/: notes.py  tags.py
test_app_notes/src/routes/: notes.py  tags.py
