[tool.poetry]
name = "contacts-fast-api"
version = "0.1.0"
description = ""
authors = ["lana-sviatash <sviatash.s@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
pydantic = "^2.3.0"
jinja2 = "^3.1.2"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.4.0"
pyjwt = "^2.8.0"
jwt = "^1.3.1"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
fastapi-limiter = "0.1.4"
cloudinary = "^1.36.0"
pydantic-settings = "^2.1.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
pytest = "^7.4.3"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
